--- a/app/templates/components/correction-unit.hbs
+++ b/app/templates/components/correction-unit.hbs
@@ -21,7 +21,7 @@
        {{/each}}
 
        <button {{action "save"}} class="btn btn-primary">Uložit body</button>
-       
+
        <div class="form-group" style="margin-top:10px">
             <select id="a_{{ident}}" class="form-control col-md-1">
               <option value="">Vyber trofej pro přidání</option>
@@ -29,21 +29,21 @@
                 <option value="{{ach.id}}">{{ach.title}}</option>
               {{/each}}
             </select>
-            <button {{action "add_achievement"}} class="btn btn-primary">Přidat trofej</button>
+            <button {{action "add_achievement"}} class="btn btn-primary" style="margin-top:10px">Přidat trofej</button>
        </div>
-       
-       
+
+
        <label>Uživatelovy trofeje:</label>
        {{#each model.achievements as |ach|}}
            <div>
               {{achievement-small model=ach}}
-              <br><a href="javascript.void()" {{action "ach_del" ach.id}}>Odebrat</a>
+              <a href="javascript.void()" {{action "ach_del" ach.id}}>Odebrat</a>
            </div>
        {{else}}
            Uživatel nemá za tuto úlohu žádné trofeje
        {{/each}}
 
-       
+
        <div class="form-group" style="margin-top:20px">
          <label>Komentář:</label>
          {{#if model.comment}}
@@ -58,11 +58,11 @@
                 {{/if}}
               </button>
             </div>
-        
+
             {{#if info}}
               <div class="alert alert-info">{{info}}</div>
             {{/if}}
-        
+
             {{#if new_thread}}
               {{#unless session.isAuthenticated}}
                 {{warning-login text="Pro založení nového vlákna musíš být přihlášen."}}
