--- a/app/templates/admin/correcting.hbs
+++ b/app/templates/admin/correcting.hbs
@@ -71,15 +71,17 @@
   {{#unless filter_in_progress}}
     {{#if corrections}}
       <div class="alert alert-info">Opravení v aktuálním filtru: <strong>{{corrections.length}}</strong></div>
-    {{/if}}
 
-    <div class="alert alert-info">
-      Až budou úlohy opraveny, nezapomeň je zveřejnit!
-    </div>
-    <div style="margin-left:18px">
-      <br><button class="btn btn-primary" style="width: 250px; margin-bottom:20px;" {{action "publish"}}>Zveřejnit výsledky</button> <b>{{publish_done}}</b>
-      <br><a href="javascript:void()" {{action "all"}}>Stáhnout všechna řešení v jednom ZIP souboru</a>
-    </div>
+      {{#if is_task_selected}}
+        <div class="alert alert-info">
+          Až budou úlohy opraveny, nezapomeň je zveřejnit!
+          <br><button class="btn btn-primary" style="width: 250px; margin-bottom:20px;" {{action "publish"}}>Zveřejnit výsledky</button> <b>{{publish_done}}</b>
+        </div>
+        <div style="margin-left:18px">
+          <br><a href="javascript:void()" {{action "all"}}>Stáhnout všechna řešení v jednom ZIP souboru</a>
+        </div>
+      {{/if}}
+    {{/if}}
 
     {{#each corrections as |corr|}}
       {{correction-unit model=corr}}
