--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -30,15 +30,19 @@
           <td>{{task.wave.caption}}</td>
           <td>
             {{#if task.can_deploy}}
-              <a href="javascript:void()" {{action "task-deploy" task}}>Deploy</a>
-              |
+              <button class="btn btn-primary inline" {{action "task-deploy" task}}>Deploy</button>
+            {{else}}
+              <button class="btn btn-primary disabled inline" title="Deploy úlohy může provádět pouze autor úlohy, garant vlny nebo administrátor.">Deploy</button>
             {{/if}}
             {{#if task.can_merge}}
-              <a href="javascript:void()" {{action "task-merge" task}}>Merge</a>
-              |
+              <button class="btn btn-primary inline" {{action "task-merge" task}}>Merge</button>
+            {{else}}
+              <button class="btn btn-primary disabled inline" title="Merge může provádět pouze garant vlny nebo administrátor, úloha navíc nesmí být ve větvi master.">Merge</button>
             {{/if}}
             {{#if task.can_delete}}
-              <a href="javascript:void()" {{action "task-delete" task}}>Zmazat</a>
+              <button class="btn btn-primary inline" {{action "task-delete" task}}>Zmazat</button>
+            {{else}}
+              <button class="btn btn-primary disabled inline" title="Úlohu může smazat pouze administrátor.">Zmazat</button>
             {{/if}}
           </td>
         </tr>
