--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -1,55 +1,62 @@
 <section id="admin-tasks" class="container content-section" style="text-align:justify">
   <h2>Správa úloh</h2>
-  <a href="javascript:void()" {{action "task-create"}}>Nová úloha</a>
+  <p><a href="javascript:void()" {{action "task-create"}}>Nová úloha</a></p>
   {{#if merge_status}}
     <div class="alert alert-info" style="margin-top:20px">{{merge_status}}</div>
   {{/if}}
   {{#if error_status}}
     <div class="alert alert-danger" style="margin-top:20px">{{error_status}}</div>
   {{/if}}
-  <select {{action "wave_select"}} class="form-control" id="wave_sel">
-    <option value="">Vyber vlnu</option>
-    {{#each model.waves as |w|}}
-      <option value="{{w.id}}">
-        {{w.caption}}
-      </option>
+
+  <label>Filtrovat úlohy podle vlny</label>
+  {{#x-select value=wave class="form-control"}}
+    {{#x-option value=""}}Všechny vlny{{/x-option}}
+    {{#each waves as |w|}}
+      {{#x-option value=w.id}}{{w.caption}}{{/x-option}}
     {{/each}}
-  </select>
+  {{/x-select}}
+
   <table class="table table-striped">
-    <thead>
-      <tr style="height:45px">
-        <th>Název</th>
-        <th>Vlna</th>
-        <th>Akce</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each tasks as |task|}}
-        <tr style="height:45px">
-          <td>{{#link-to "admin/task-edit" task}}{{task.title}}{{/link-to}}</td>
-          <td>{{task.wave.caption}}</td>
-          <td>
-            {{#if task.can_deploy}}
-              <button class="btn btn-primary inline" {{action "task-deploy" task}}>Deploy</button>
-            {{else}}
-              <button class="btn btn-primary disabled inline" title="Deploy úlohy může provádět pouze autor úlohy, garant vlny nebo administrátor.">Deploy</button>
-            {{/if}}
-            {{#if task.can_merge}}
-              <button class="btn btn-primary inline" {{action "task-merge" task}}>Merge</button>
-            {{else}}
-              <button class="btn btn-primary disabled inline" title="Merge může provádět pouze garant vlny nebo administrátor, úloha navíc nesmí být ve větvi master.">Merge</button>
-            {{/if}}
-            {{#if task.can_delete}}
-              <button class="btn btn-primary inline" {{action "task-delete" task}}>Zmazat</button>
-            {{else}}
-              <button class="btn btn-primary disabled inline" title="Úlohu může smazat pouze administrátor.">Zmazat</button>
-            {{/if}}
-          </td>
-        </tr>
-      {{/each}}
-    </tbody>
-  </table>
-  {{#if deploy_status}}
+	<!--<thead>
+	  <tr style="height:45px">
+		<th>Název</th>
+		<th>Vlna</th>
+		<th>Akce</th>
+	  </tr>
+	</thead> -->
+	<tbody>
+  {{#each tasks as |task|}}
+	  {{#if task.first_in_wave}}
+	    <h3>{{task.wave.caption}}</h3>
+	  {{/if}}
+
+		<tr style="height:45px">
+		  <td>{{#link-to "admin/task-edit" task}}{{task.title}}{{/link-to}}</td>
+		  <td>
+			{{#if task.can_deploy}}
+			  <button class="btn btn-primary inline" {{action "task-deploy" task}}>Deploy</button>
+			{{else}}
+			  <button class="btn btn-primary disabled inline" title="Deploy úlohy může provádět pouze autor úlohy, garant vlny nebo administrátor.">Deploy</button>
+			{{/if}}
+			{{#if task.can_merge}}
+			  <button class="btn btn-primary inline" {{action "task-merge" task}}>Merge</button>
+			{{else}}
+			  <button class="btn btn-primary disabled inline" title="Merge může provádět pouze garant vlny nebo administrátor, úloha navíc nesmí být ve větvi master.">Merge</button>
+			{{/if}}
+			{{#if task.can_delete}}
+			  <button class="btn btn-primary inline" {{action "task-delete" task}}>Zmazat</button>
+			{{else}}
+			  <button class="btn btn-primary disabled inline" title="Úlohu může smazat pouze administrátor.">Zmazat</button>
+			{{/if}}
+		  </td>
+		</tr>
+	  {{else}}
+	  <p>V této vlně nejsou žádné úlohy.</p>
+	  {{/each}}
+	</tbody>
+	</table>
+
+ {{#if deploy_status}}
     <div id="myModal" class="modal" role="dialog" style="display: block">
       <div class="modal-dialog">
         <div class="modal-content">
