--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -80,6 +80,8 @@
             {{#if error_status}}
               <div class="alert alert-danger" style="margin-top:20px">{{error_status}}</div>
             {{/if}}
+            <p>Tato operace potrvá několik sekund, vyčkejte prosím.</p>
+            <label>Log událostí:</label>
             <pre>{{deploy_log}}</pre>
           </div>
         </div>
