--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -38,11 +38,11 @@
 	      {{#unless task.wave.published}}
 	        <p>
 	          {{#if task.wave.busy}}
-	           <button class="btn btn-primary disabled inline">Nová úloha</button>
-	           <button class="btn btn-primary disabled inline">Diff</button>
+	            <button class="btn btn-primary disabled inline">Nová úloha</button>
+	            <button class="btn btn-primary disabled inline">Diff</button>
 	          {{else}}
-	           <button class="btn btn-primary inline" {{action "task-create" task.wave}}>Nová úloha</button>
-	           <button class="btn btn-primary inline" {{action "wave-diff" task.wave}}>Diff</button>
+              {{#link-to "admin/task-create" task.wave class="btn btn-primary inline"}}Nová úloha{{/link-to}}
+	            <button class="btn btn-primary inline" {{action "wave-diff" task.wave}}>Diff</button>
 	          {{/if}}
 	        </p>
 	      {{/unless}}
