--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -34,19 +34,20 @@
 	  {{#if task.first_in_wave}}
 	    <tr style="background-color: white;"><td colspan="6">
 	    <h3>{{task.wave.caption}}</h3>
+	    <p>
 	    {{#if task.can_create}}
 	      {{#unless task.wave.published}}
-	        <p>
-	          {{#if task.wave.busy}}
-	            <button class="btn btn-primary disabled inline">Nová úloha</button>
-	            <button class="btn btn-primary disabled inline">Diff</button>
-	          {{else}}
-              {{#link-to "admin/task-create" task.wave class="btn btn-primary inline"}}Nová úloha{{/link-to}}
-	            <button class="btn btn-primary inline" {{action "wave-diff" task.wave}}>Diff</button>
-	          {{/if}}
-	        </p>
+	         <button class="btn btn-primary inline" {{action "task-create" task.wave}}>Nová úloha</button>
 	      {{/unless}}
 	    {{/if}}
+
+	    {{#if task.wave.busy}}
+	     <button class="btn btn-primary disabled inline">Diff</button>
+	    {{else}}
+	     <button class="btn btn-primary inline" {{action "wave-diff" task.wave}}>Diff</button>
+	    {{/if}}
+
+	    </p>
 	    </td></tr>
 	  {{/if}}
 
