--- a/app/templates/admin/task-edit.hbs
+++ b/app/templates/admin/task-edit.hbs
@@ -1,6 +1,7 @@
 <section id="admin-task-edit" class="container content-section" style="text-align:justify">
   <h2>Úprava úlohy</h2>
   {{#link-to "admin/tasks"}}Zpět na přehled{{/link-to}}
+  <div class="alert alert-danger" style="margin-top:20px">Parametry níže upravujte jen pokud víte, co děláte.</div>
   <div class="panel panel-ksi" style="margin-top:20px">
     <div class="panel-body">
 
