--- a/app/templates/admin/task-create.hbs
+++ b/app/templates/admin/task-create.hbs
@@ -1,5 +1,6 @@
 <section id="admin-task-create" class="container content-section" style="text-align:justify">
   <h2>Nová úloha</h2>
+  <h4>{{model.wave.caption}}</h4>
   {{#link-to "admin/tasks"}}Zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
     <div class="panel-body">
@@ -18,16 +19,16 @@
         {{/x-select}}
 
         <h3>Git</h3>
-        <p>{{input type="checkbox" checked=git_create}} Vytvoriť git repository</p>
+        <p>{{input type="checkbox" checked=git_create}} Vytvořit úlohu v gitu</p>
 
-        <label>Branch: </label>
+        <label>Větev úlohy:</label>
         {{input class="form-control" value=git_branch}}
 
-        <label>Path: </label>
+        <label>Adresář úlohy:</label>
         {{input class="form-control" value=git_path}}
-        
+
         {{#unless git_create}}
-          <label>Commit: </label>
+          <label>Verze úlohy na webu odpovídá commitu: (není nutné vyplňovat)</label>
           {{input class="form-control" value=git_commit}}
         {{/unless}}
 
