--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -12,7 +12,11 @@
         </div>
         <div class="row" style="padding-left:5px; margin-left: 20px">
           <h5 class="inline">Termín odevzdání: </h5>
-          <p class="task-points inline">{{date-and-time model.time_deadline 'cs'}}</p>
+          {{#if model.time_deadline}}
+            <p class="task-points inline">{{date-and-time model.time_deadline 'cs'}}</p>
+          {{else}}
+            <p class="task-points inline">v nekonečnu</p>
+          {{/if}}
         </div>
 
         <div class="row" style="margin-top: 20px">
