--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -10,8 +10,8 @@
             </button>
             {{#link-to "index" class="pull-left header-link" rel="home"}}
                   <img src="img/karlik_color.png" class="inline" style="padding-left: 5px; max-width:53px;"/>
-                  <!--<div class="inline visible-xs" style="padding-left: 5px">KSI</div>-->
-                  <div class="hidden-xs inline" style="padding-left: 5px">Korespondenční seminář z informatiky</div><!-- TODO krajsi text -->
+                  <div class="visible-xs-inline visible-sm-inline" style="padding-left: 5px">KSI</div>
+                  <div class="hidden-xs hidden-sm inline" style="padding-left: 5px">Korespondenční seminář z informatiky</div>
             {{/link-to}}
         </div>
         <div class="navbar-collapse collapse" id="navbar-collapse-main">
