--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -1,17 +1,6 @@
 <nav class="navbar navbar-default navbar-static-top navbar-left navbar-admin" style="z-index:100" id=navbaradmin>
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-admin-navbar-collapse" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-admin-navbar-collapse">
+    <div id="bs-admin-navbar-collapse">
       <div class="navbar-inner">
         <ul class="nav navbar-nav">
           <li class="navbar-admin-li">{{#link-to "admin/e-mail"}}E-mail{{/link-to}}</li>
