Add task merge confirmation dialog.

--- a/app/templates/admin/task-create.hbs
+++ b/app/templates/admin/task-create.hbs
@@ -38,7 +38,7 @@
         {{#unless saving}}
           <button class="btn btn-primary inline" id="save" {{action "task-save"}}>Uložit</button>
         {{else}}
-          <button class="btn btn-primary inline disabled" id="save-disabled">Vytvářím úlohu...</button>
+          <button class="btn btn-primary inline disabled" id="save-disabled">Vytvářím úlohu, tato operace může trvat několik sekund...</button>
         {{/unless}}
       </div>
     </div>
