--- a/app/styles/layout/navbar-admin.scss
+++ b/app/styles/layout/navbar-admin.scss
@@ -15,6 +15,7 @@
 }
 
 .navbar-admin-li {
-    margin-left: 20px;
-    margin-right: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  float: left !important;
 }
