--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -10,6 +10,7 @@
           <li class="navbar-admin-li">{{#link-to "admin/vlny"}}Vlny{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/achievements"}}Trofeje{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/graph"}}Graf{{/link-to}}</li>-->
+          <li class="navbar-admin-li">{{#link-to "admin/years"}}Ročníky{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/waves"}}Vlny{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/tasks"}}Úlohy{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/articles"}}Články{{/link-to}}</li>
