--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -4,12 +4,9 @@
       <div class="navbar-inner">
         <ul class="nav navbar-nav">
           <li class="navbar-admin-li">{{#link-to "admin/e-mail"}}E-mail{{/link-to}}</li>
-          <!--<li class="navbar-admin-li">{{#link-to "admin/export"}}Export{{/link-to}}</li>
-          <li class="navbar-admin-li">{{#link-to "admin/schools"}}Školy{{/link-to}}</li>
+          <!-- <li class="navbar-admin-li">{{#link-to "admin/schools"}}Školy{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/achievements"}}Trofeje{{/link-to}}</li> -->
           <li class="navbar-admin-li">{{#link-to "admin/users"}}Uživatelé{{/link-to}}</li>
-          <li class="navbar-admin-li">{{#link-to "admin/vlny"}}Vlny{{/link-to}}</li>
-          <li class="navbar-admin-li">{{#link-to "admin/achievements"}}Trofeje{{/link-to}}</li>
-          <li class="navbar-admin-li">{{#link-to "admin/graph"}}Graf{{/link-to}}</li>-->
           <li class="navbar-admin-li">{{#link-to "admin/years"}}Ročníky{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/waves"}}Vlny{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/tasks"}}Úlohy{{/link-to}}</li>
