--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -18,12 +18,7 @@
       </div>
 
       <div class="form-group">
-        <label>Zveřejněno:</label>
-        <!-- TODO zatim nefunguje -->
-        {{#x-select value=model.gender class="form-control" id="published" required=true}}
-            {{#x-option value="true" selected=(is-equal "true" model.published)}}ano{{/x-option}}
-            {{#x-option value="false" selected=(is-equal "false" model.published)}}ne{{/x-option}}
-        {{/x-select}}
+        {{input type="checkbox" checked=model.published}} Zveřejněn
       </div>
 
       <div class="form-group">
@@ -40,8 +35,7 @@
       </div>
 
       <div class="row" style="margin-left:0px; margin-top:20px">
-        <button class="btn btn-primary inline" id="save">Uložit</button> <!-- TODO button -->
-        <button class="btn btn-primary inline" id="delete">Smazat</button> <!-- TODO button -->
+        <button class="btn btn-primary inline" id="save" {{action "article-save"}}>Uložit</button>
       </div>
     </div>
   </div>
