--- a/app/templates/admin/articles.hbs
+++ b/app/templates/admin/articles.hbs
@@ -1,6 +1,7 @@
 <section id="admin-articles" class="container content-section" style="text-align:justify">
   <h2>Správa článků</h2>
-  {{#link-to "admin/article-edit"}}nový článek{{/link-to}}
+  <div class="alert alert-warning" style="margin-top:20px">Správa článků zatím není funkční.</div>
+  {{#link-to "admin/article-edit" class="btn btn-primary inline"}}Nový článek{{/link-to}}
   <table class="table table-striped">
     <thead>
       <tr style="height:45px">
@@ -13,10 +14,16 @@
     <tbody>
      {{#each model as |article|}}
         <tr style="height: 45px">
-            <td><img src="{{article.picture}}" style="height: 25px;" align="center"> {{article.title}}</td>
+            <td>{{#link-to "article" article target="_blank"}}<img src="{{article.picture}}" style="height: 25px;" align="center"> {{article.title}}{{/link-to}}</td>
             <td>{{date-and-time article.time_published 'cs'}}</td>
             <td>{{article.published_str}}</td>
-            <td>{{#link-to "admin/article-edit" article}}upravit{{/link-to}} <a href="#">smazat</a></td>
+            <td>{{#link-to "admin/article-edit" article class="btn btn-primary inline"}}Upravit{{/link-to}}
+                {{#if article.deleting}}
+                    <button class="btn btn-primary inline disabled">Mažu...</button>
+                {{else}}
+                    <button class="btn btn-primary inline" {{action "article-delete" article}}>Smazat</button>
+                {{/if}}
+            </td>
         </tr>
      {{else}}
         <p>V aktuálním ročníku zatím nebyly přidány žádné články.</p>
