--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -6,6 +6,7 @@
           <li class="navbar-admin-li">{{#link-to "admin/e-mail"}}E-mail{{/link-to}}</li>
           <!-- <li class="navbar-admin-li">{{#link-to "admin/schools"}}Školy{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/achievements"}}Trofeje{{/link-to}}</li> -->
+          <li class="navbar-admin-li">{{#link-to "admin/achievements"}}Trofeje{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/users"}}Uživatelé{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/years"}}Ročníky{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/waves"}}Vlny{{/link-to}}</li>
