--- a/app/templates/admin/achievements.hbs
+++ b/app/templates/admin/achievements.hbs
@@ -1,24 +1,35 @@
-<section id="admin-chievement" class="container content-section" style="text-align:justify">
-  <h2>Správa trefejí</h2>
-  {{#link-to "admin/achievement-edit"}}nová trofej{{/link-to}}
+<section id="admin-achievement" class="container content-section" style="text-align:justify">
+  <h2>Správa trofejí</h2>
+  <!-- {{#link-to "admin/ahievement-creare" class="btn btn-primary inline"}}Nová trofej{{/link-to}} -->
   <table class="table table-striped">
     <thead>
       <tr style="height:45px">
-        <th>Název</th>
         <th>Obrázek</th>
+        <th>Název</th>
         <th>Akce</th>
       </tr>
     </thead>
     <tbody>
-      <tr style="height:45px">
-        <td>Trofej 1.</td>
-        <td><img src="http://placehold.it/30x30"></td>
-        <td>
-          {{#link-to "admin/achievement-edit"}}upravit{{/link-to}}
-          |
-          <a href="#">smazat</a>
-        </td>
-      </tr>
+     {{#each model as |achievement|}}
+        <tr style="height: 45px">
+            <td><img src="{{achievement.picture_r}}" style="height: 25px;" align="center"></td>
+            <td>{{achievement.title}}</td>
+            <td><!-- {{#link-to "admin/achievement-edit" article class="btn btn-primary inline"}}Upravit{{/link-to}} -->
+                {{#if session.current_user.admin}}
+                    {{#if achievement.deleting}}
+                        <button class="btn btn-primary inline disabled">Mažu...</button>
+                    {{else}}
+                        <button class="btn btn-primary inline" {{action "achievement-delete" achievement}}>Smazat</button>
+                    {{/if}}
+                {{else}}
+                    <button class="btn btn-primary inline disabled" title="Trofej může smazat pouze administrátor">Smazat</button>
+                {{/if}}
+            </td>
+        </tr>
+     {{else}}
+        <p>V aktuálním ročníku KSI zatím nejsou žádné trofeje.</p>
+     {{/each}}
     </tbody>
   </table>
 </section>
+
