--- a/app/templates/admin/achievements.hbs
+++ b/app/templates/admin/achievements.hbs
@@ -15,6 +15,7 @@
             <td><img src="{{achievement.picture_r}}" style="height: 25px;" align="center"></td>
             <td>{{achievement.title}}</td>
             <td><!-- {{#link-to "admin/achievement-edit" article class="btn btn-primary inline"}}Upravit{{/link-to}} -->
+                <button class="btn btn-primary inline" {{action "achievement-grant" achievement}}>Udělit</button>
                 {{#if session.current_user.admin}}
                     {{#if achievement.deleting}}
                         <button class="btn btn-primary inline disabled">Mažu...</button>
